<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    android:minHeight="@dimen/_600sdp"
    app:cardBackgroundColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_background"
        android:padding="16dp">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bottom_sheet_handle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/blue_600"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_version_info"
                android:textColor="#666666"
                android:textSize="12sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_app_button"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_share_app"
            android:textSize="15sp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_600"
            app:icon="@drawable/ic_share"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/privacy_policy_button"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/title_privacy_policy"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_600"
            app:icon="@drawable/ic_privacy"
            app:iconTint="@color/white" />

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
        </FrameLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>